--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,14 @@
   "name": "client",
   "version": "1.0.0",
   "description": "Desktop app for edr",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^18.2.3"
+    "electron": "^18.2.3",
+    "http": "^0.0.1-security"
   }
 }
