--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "electron": "^18.2.3",
     "http": "^0.0.1-security"
